# propella-curation

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/propella_curation/: __init__.py  dataset_card.py  labels.py  score_sampler.py
src/propella_curation/configs/: default.yaml  propella_all.yaml
tests/: test_score_sampler.py
